--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="col-md-12 col-lg-8">
                 
                 
-                <p class="mbr-text mbr-fonts-style display-7">Come and join us <strong>after the 12:30pm Communion Service each Wednesday</strong> for a light <strong>lunch </strong>and friendly fellowship in the parish centre.  All are welcome to come along!<br><br>Reconciliation is on <strong>Saturdays</strong>&nbsp;between 8:15am and 8:45am.</p>
+                <p class="mbr-text mbr-fonts-style display-7">Come and join us <strong>after the 12:30pm Communion Service each Wednesday</strong> for a light <strong>lunch </strong>and friendly fellowship in the parish centre.&nbsp; All are welcome to come along!<br><br><br></p>
             </div>
         </div>
     </div>
@@ -236,7 +236,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="PqnBVNarAiWZkAzWwtMh8sKhvFh8RHOVGpwyM+c0lutnHOBNSoYlUabJO8alrWbUNyetY44Rk4gL4RA9bwVgViTzRGefbz0Hza1hdWplijWPAkocswQrqs3zkYmRvk4l">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="rOYFrIf0rFPPys2kWJm7V00m2P00to5TbdqiSYfSKw/gxkgqJJjyTKEwGXNchEIgWYcLhenpFcZESX1Gjp7N1Yvet54bfjapL5pzyLJql12c+FmGdFNdXtqWKadRyjDK">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out our contact form! We will respond within the office hours listed above.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -334,7 +334,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/html-code-generator.html">HTML Code Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
