--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Welcome to our Parish</strong></h1>
                 <p class="mbr-text mbr-fonts-style display-4">The vision for St Thomas Parish is simple: that all of us continue the ministry of Jesus; that as a parish we help more people to find a home in Jesus’ Church.&nbsp;<br><br><strong>Fr Wayne's health update: Father cannot accept visitors while he is receiving chemotherapy treatment.&nbsp; He sends his prayers and best wishes to all in the Parish.</strong><br><br><strong>Father Richard Rutkauskas has been appointed as the Priest Administrator to celebrate Masses at our Parish.</strong><br><br><strong>Regular weekend Masses</strong><br>Saturday vigil - 5.30pm
-<br>Sunday morning - 7.30am and 9.30am<strong><br></strong><br><strong>Regular weekday Masses:</strong><br>Tuesday 9am<br>Wednesday 12pm Rosary followed by Mass at 12.30pm<br>Thursday 9am<br>Friday 9am<br>Reconciliation from 4.30pm to 5.00pm on Saturday.<strong><br></strong></p>
+<br>Sunday morning - 7.30am and 9.30am<strong><br></strong><br><strong>Regular weekday Masses:</strong><br>Tuesday 9am<br>Wednesday 12 noon Rosary followed by Mass at 12.30pm<br>Thursday 9am<br>Friday 9am<br>Reconciliation from 4.30pm to 5.00pm on Saturday.<strong><br></strong></p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="index.html#content5-4">View Mass Times</a> <a class="btn btn-danger display-4" href="index.html#content3-6">Bulletins</a> 
                     <a class="btn btn-primary-outline display-4" href="index.html#form5-7">Contact Us &gt;</a></div>
             </div>
@@ -237,7 +237,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="MxBZOsrhYtEHq8Q1AHgvy3FGEGZkUMxZqd/kExjxMf3YQHEvRXdd0216moolkN5Ahi0V+fcbGY0x2ZsCejsmPioD0PPUNUL4Ke8jd3cZ5C6TKb/BqDmwycmMHiYkuOBt">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="htX9LMx21NoN+hmMP3cYdbuORaDSXMNlP5Ms1YqpDp6gmY4yN7wQYVOJyjiBB26hvkCs/m+MJzBbZNhMAvJQWCob5WRu4BquMDLDCQaZT/bhUiq0cD/H7Cfyh6uo+gRf">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out our contact form! We will respond within the office hours listed above.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -335,7 +335,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/landing-page-software.html">Landing Page Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
