--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="card-wrapper">
                     <span class="mbr-iconfont m-auto mobi-mbri-sun mobi-mbri"></span>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style mb-2 display-7">Tuesday 9:00am,<br>Wednesday 12.30pm</h4>
+                        <h4 class="card-title mbr-fonts-style mb-2 display-7">Tuesday 9:00am,<br><br>Wednesday 12.30pm</h4>
                         <h5 class="card-text mbr-fonts-style display-4"></h5>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                 <div class="card-wrapper">
                     <span class="mbr-iconfont m-auto mobi-mbri-sun2 mobi-mbri"></span>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style mb-2 display-7">Thursday 9:00am, Friday 9:00am</h4>
+                        <h4 class="card-title mbr-fonts-style mb-2 display-7">Thursday 9:00am,<br><br> Friday 9:00am</h4>
                         <h5 class="card-text mbr-fonts-style display-4"></h5>
                     </div>
                 </div>
@@ -237,7 +237,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="TJWn5tl+NqaHu+MxGMzNHpZ2HrLOAdnFHs9+TsIL+/2efCAzLOM+JjhuYQLQLf2+mhNc1XfZAEsextVx5guhmViKyZL6uXKzwteNSO2aIgflFfw0EkRsEwC+SP4DbGYL">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="OZBGjLA3xoJ4ohGkFj/YWYOsUOI99fwpuMlrltD6nAeRB6+N2RWTUaDn/Drz27pYYP9gfV0SCsLJaIE1+yvTHUj3eanEt6wMMZ14Q8KHEFNHujdvK57C3sl/om/SpjWs">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out our contact form! We will respond within the office hours listed above.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -335,7 +335,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag and Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag & Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
