--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div>
         <div class="mbr-section-head mb-4">
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Map</strong></h3>
-            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-7"><strong>Parish Priest:</strong> Fr Wayne Davis <br><strong>Secretary:</strong> Prue Pupazzoni<br>We're located next to St. Thomas Primary School, at 2 College Road, Corner of Melville Parade, Claremont.</h4>
+            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-7"><strong>Parish Priest:</strong> Fr Richard Rutkauskas<br><strong>Secretary:</strong> Prue Pupazzoni<br>We're located next to St Thomas Primary School, at 2 College Road, Corner of Melville Parade, Claremont.</h4>
         </div>
         <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13537.547888368097!2d115.7800491697754!3d-31.977523699999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2a32a44eeb348f8d%3A0x769b9f21c9ef5b02!2sSt%20Thomas%20Church%2C%202%20College%20Rd%2C%20Claremont%20WA%206010!5e0!3m2!1sen!2sau!4v1688531863966!5m2!1sen!2sau" allowfullscreen=""></iframe></div>
     </div>
@@ -237,7 +237,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="1KxITKYSLLvGtaUyW76hS4OZb0OTxay/Je3p0GmzYEorROr70ZZdPjm3r3XvRBEgyUN83567M0DjxvXed1UycgRaCfb5iEN3JCX8RJfEDecku0JKWnIzOoSloVCIK10+">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="UTpuW5hYkXdSWqasQCLo3f7qn2O/AjXz2nuflpl72qjX5zvtsHW6aw5iO1enHnFqCVXt6cp1puaN+TH9pnl0JMIPvKURMAxP6GW/IY+lY4ApSdORP+chsPjlgs5iI47j">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out our contact form! We will respond within the office hours listed above.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -335,7 +335,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
