--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                     <img src="assets/images/claremontrc8-567x379.webp" alt="Mobirise Website Builder">
                 </div>
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Welcome to our Parish</strong></h1>
-                <p class="mbr-text mbr-fonts-style display-7"></p><p><strong>Father Richard Rutkauskas has now been appointed as our Parish Priest.<br></strong><br><br><strong>The vision for St Thomas Parish is simple: that all of us continue the ministry of Jesus; that as a parish we help more people to find a home in Jesus’ Church.&nbsp;<br><br></strong><br><br><br><strong>Regular weekend Masses</strong><br>Saturday vigil - 5.30pm
-<br>Sunday morning - 7.30am and 9.30am<strong><br></strong><br><strong>Regular weekday Masses:</strong><br>Tuesday 9am<br>Wednesday 12 noon Rosary followed by Mass at 12.30pm<br>Thursday 9am<br>Friday 9am<br>Reconciliation from 4.30pm to 5.00pm on Saturday.<br><br><br><br></p><p></p>
+                <p class="mbr-text mbr-fonts-style display-7"></p><p><strong>Father Richard Rutkauskas will be away on holidays from Monday 30 April and will return on Friday 10 May.</strong><br><br><strong>Mass will be celebrated by Fr Sharbel and Fr Greg Donovon.<br></strong><br><br><strong>The vision for St Thomas Parish is simple: that all of us continue the ministry of Jesus; that as a parish we help more people to find a home in Jesus’ Church.&nbsp;<br><br></strong><br><br><br><strong>Regular weekend Masses</strong><br>Saturday vigil - 5.30pm
+<br>Sunday morning - 7.30am and 9.30am<strong><br></strong><br><strong>Regular weekday Masses:</strong><br>Tuesday 9am (but NO Mass on 7 May)<br>Wednesday 12 noon Rosary followed by Mass at 12.30pm<br>Thursday 9am<br>Friday 9am<br>Reconciliation from 4.30pm to 5.00pm on Saturday.<br><br><br><br></p><p></p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="index.html#content5-4">View Mass Times</a> <a class="btn btn-danger display-4" href="index.html#content3-6">Bulletins</a> 
                     <a class="btn btn-primary-outline display-4" href="index.html#form5-7">Contact Us &gt;</a></div>
             </div>
@@ -237,7 +237,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Lh62et2m8jdI0BQHFhf8+1JVKoDz0PY34b1PcOrlMx9sUCTtx9XhCpTfmiBOSTzC8UXFxgRgMDapMLRq/Xov2FNhQbPlL1mKEHgKnzBdTKOLiOHRT+OWPdey8A2hIJZl">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="tyoWF0pJAVmOIPaswN/qwDvtiKddpq9GoaIdVxgsvJ1RJwTbijuZXSo9ylmOL7TakmPs36LvSoWM9sqrzBOcTBK3SU+lp/QLOcweHOsh6ihz6zbfNpr8EQIHyMx8WEyL">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out our contact form! We will respond within the office hours listed above.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -335,7 +335,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag & Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3051257" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
